# DoubutsuShogi

./: .gitignore  Board.cpp  Board.h  DoubutsuSyogi.cpp  DoubutsuSyogiKoutaiKaiseki.cpp  Makefile  README.md  justprint.cpp  pyproject.toml  requirements.txt
doubutsusyogi/: board.py  load_pkl.py  search.py
tests/: conftest.py
tests/doubutsusyogi/: test_board.py
