[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "doubutsusyogi"
description = "どうぶつしょうぎを解析するライブラリ"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
version = "0.1.0"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 79
